@@ -1,5 +1,8 @@
+* Added an InfoPathFilter, which allows filtering with an arbitrary match function applied to an arbitrary field of Path.info(). Used this to implement a filter text box for path choosers.
+
 0.27.0
 ------
+
 * Keeping the same font dpi no matter where gaffer is running.
 
 * Fixed bug which caused NameError to be thrown when loading a script containing an OpHolder.
